--- a/basic-phone-app/app.json
+++ b/basic-phone-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Phone App",
+    "name": "Photo App",
     "slug": "basic-phone-app",
     "privacy": "public",
     "sdkVersion": "36.0.0",
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": ""
   }
 }
