--- a/basic-phone-app/package.json
+++ b/basic-phone-app/package.json
@@ -18,7 +18,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.13",
-    "expo-camera": "~8.0.0"
+    "expo-camera": "~8.0.0",
+    "expo-file-system": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
