--- a/basic-phone-app/package.json
+++ b/basic-phone-app/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-file-system": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -18,8 +20,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.13",
-    "expo-camera": "~8.0.0",
-    "expo-file-system": "~8.0.0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
