--- a/basic-phone-app/app.json
+++ b/basic-phone-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Photo App",
-    "slug": "basic-phone-app",
+    "slug": "basic-photo-app",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -26,6 +26,7 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "description": "Photo & photo gallery app built using React native",
+    "githubUrl": "https://github.com/hyungmogu/basic-photo-app"
   }
 }
